[package]
name = "polars-countvectorizer-repo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10.0"
unidecode = "0.2.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117" }
bincode = "1.3.3"
ndarray = "0.15.6"
linfa-preprocessing = "0.7.0"
polars = "0.44.2"
pyo3-polars = "0.18.0"
sprs = "0.11.2"
pyo3 = { version = "0.21", features = ["extension-module"] }
