[project]
name = "polars-countvectorizer-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cargo>=0.3",
    "pip>=24.3.1",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"


[tool.maturin]
module-name = "polars_countvectorizer"